--- a/blog.html
+++ b/blog.html
@@ -70,8 +70,7 @@
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">الصفحة
-                                    الرئسية</a>
+                                <a class="nav-link" aria-current="page" href="index.html">الصفحة الرئيسية</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="who-we-ara.html">من نحن</a>
@@ -359,7 +358,9 @@
                 <p data-aos="fade-down" data-aos-duration="1000">مقالات غنية بالمعلومات المفيدة</p>
                 <div data-aos="fade-down" data-aos-duration="1000">
                     <input type="text" placeholder="البريد الالكتروني" class="form-control">
-                    <button>سجل الآن</button>
+                    <a href="https://slsalah.space/signup">
+                        <button>سجل الآن</button>
+                    </a>
                 </div>
             </div>
         </div>
