--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
                 <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center py-4">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">الصفحة
-                                الرئسية</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">الصفحة الرئيسية</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="who-we-ara.html">من نحن</a>
@@ -209,122 +208,156 @@
 
     <section id="video">
         <div class="container">
-            <div class="row mx-auto col-md-8" data-aos="fade-down" data-aos-duration="1000">
-                <h3 class=" headline load-hidden">تعرف على <span class="main-color">سلسلة</span> بفيديو</h3>
-                <p class="headline">
+            <div class="row mx-auto col-md-8">
+                <h3 data-aos="fade-down" data-aos-duration="1000" class=" headline load-hidden">تعرف على <span
+                        class="main-color">سلسلة</span> بفيديو</h3>
+                <p data-aos="fade-down" data-aos-duration="1000" class="headline">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
                     tristique,
                     nec malesuada elit
                 </p>
                 <div class="video-container">
                     <a href="https://www.youtube.com/watch?v=3PkufGVNlu0" target="_blank" class="video photo">
-                        <img src="imgs/video-photo.webp" class="img-fluid video-photo" />
-                        <img src="imgs/icons/play.svg" class="video-icon" alt="video icon">
-                        <img src="imgs/right-top-video.png" class="right-top-video" alt="right top video">
-                        <div class="left-bottom-layer"></div>
+                        <img data-aos="fade-down" data-aos-duration="1000" src="imgs/video-photo-2.webp"
+                            class="img-fluid video-photo" />
+                        <img data-aos="fade-up" data-aos-duration="1000" src="imgs/icons/play.svg" class="video-icon"
+                            alt="video icon">
+                        <img data-aos="fade-left" data-aos-duration="1000" src="imgs/right-top-video.png"
+                            class="right-top-video" alt="right top video">
+                        <div data-aos="fade-right" data-aos-duration="1000" class="left-bottom-layer"></div>
                     </a>
                 </div>
             </div>
         </div>
     </section>
 
-
-    <!-- <section id="articles">
+    <section id="articles">
         <div class="container">
             <h3>حقيبة ريادي</h3>
             <div class="main-articles-block">
-                <div class="article-block one text-center">
-                    <div class="title-layer">
-                        <h4 class="title">فكرة المشروع</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>تقديم جلسة عصف ذهني لمناقشة فكرة المشروع والوصول الى أفضل فكرة تلامس حاجة السوق</p>
-                    </div>
-                </div>
-                <div class="article-block two text-center">
-                    <div class="title-layer">
-                        <h4 class="title">تصميم نموذج العمل التجاري</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>تصميم نموذج العمل التجاري لإظهار ملامح المشروع.</p>
+                <div class="articles-block">
+                    <img src="imgs/articles/1.png" alt="img" class="img-fluid">
+                    <div class="content one">
+                        <div class="title">فكرة المشروع</div>
+                        <div class="description">تقديم جلسة عصف ذهني لمناقشة فكرة المشروع والوصول الى أفضل فكرة تلامس
+                            حاجة
+                            السوق.</div>
                     </div>
                 </div>
-                <div class="article-block three text-center">
-                    <div class="title-layer">
-                        <h4 class="title">دراسة جدوى</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>إعداد ملف دراسة جدوى معتمدة (المالية – القانونية – الفنية – السوقية) للمشروع.</p>
-                    </div>
-                </div>
-                <div class="article-block four text-center">
-                    <div class="title-layer">
-                        <h4 class="title">دراسة وتحليل</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>دراسة وتحليل السوق تحليل المنافسين تحليل الجمهور المستهدف.</p>
+                <div class="articles-block">
+                    <img src="imgs/articles/2.png" alt="img" class="img-fluid">
+                    <div class="content two">
+                        <div class="title">تصميم نموذج العمل التجاري</div>
+                        <div class="description">تصميم نموذج العمل
+                            التجاري لإظهار ملامح
+                            المشروع.</div>
                     </div>
                 </div>
-                <div class="article-block five">
-                    <div class="title-layer">
-                        <h4 class="title">تصميم الهوية البصرية للمشروع</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>تصميم الهوية البصرية وفلسفة الشعار واختيار اسم تجاري إبداعي وفريد أو فكرة العلامة
-                            التجارية بما يتوافق مع النشاط والصناعة</p>
-                    </div>
-                </div>
-                <div class="article-block six text-center">
-                    <div class="title-layer">
-                        <h4 class="title">ملخص وعرض استثمار</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>تقديم ملخص وعرض استثمار لجذب التمويل والمستثمرين.</p>
+                <div class="articles-block">
+                    <img src="imgs/articles/3.png" alt="img" class="img-fluid">
+                    <div class="content three">
+                        <div class="title">دراسة جدوى</div>
+                        <div class="description">إعداد ملف دراسة
+                            جدوى معتمدة
+                            (المالية – القانونية –
+                            الفنية – السوقية)
+                            للمشروع.</div>
                     </div>
                 </div>
-                <div class="article-block siven text-center">
-                    <div class="title-layer">
-                        <h4 class="title">الاستشارات والحلول القانونية</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>تقديم الاستشارات والحلول القانونية.</p>
-                    </div>
-                </div>
-                <div class="article-block eight text-center">
-                    <div class="title-layer">
-                        <h4 class="title">بناء هيكلية الموارد البشرية</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>بناء هيكلية الموارد البشرية والتوصيف الوظيفي.</p>
+                <div class="articles-block">
+                    <img src="imgs/articles/4.png" alt="img" class="img-fluid">
+                    <div class="content four">
+                        <div class="title">دراسة وتحليل</div>
+                        <div class="description">دراسة وتحليل السوق
+                            تحليل المنافسين
+                            تحليل الجمهور
+                            المستهدف.</div>
                     </div>
                 </div>
-                <div class="article-block nine text-center">
-                    <div class="title-layer">
-                        <h4 class="title">الاستشارات والحلول التقنية.</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>تقديم الاستشارات والحلول التقنية.</p>
+                <div class="articles-block">
+                    <img src="imgs/articles/5.png" alt="img" class="img-fluid">
+                    <div class="content five">
+                        <div class="title">تصميم
+                            الهوية
+                            البصرية
+                            للمشوع</div>
+                        <div class="description">تصميم الهوية البصرية
+                            وفلسفة الشعار
+                            واختيار اسم تجاري
+                            إبداعي وفريد أو فكرة
+                            العلامة التجارية بما يتوافق
+                            مع النشاط والصناعة.</div>
                     </div>
                 </div>
-                <div class="article-block ten text-center">
-                    <div class="title-layer">
-                        <h4 class="title">بناء استراتيجية التسويق</h4>
-                    </div>
-                    <div class="content-layer">
-                        <p>بناء هيكلية الموارد البشرية والتوصيف الوظيفي.</p>
+                <div class="articles-block">
+                    <img src="imgs/articles/6.png" alt="img" class="img-fluid">
+                    <div class="content six">
+                        <div class="title">ملخص
+                            وعرض
+                            استثمار</div>
+                        <div class="description">تقديم ملخص وعرض
+                            استثمار لجذب التمويل
+                            والمستثمرين.</div>
                     </div>
                 </div>
-                <div class="article-block eleven text-center">
-                    <div class="title-layer">
-                        <h4 class="title">تحديد الأهداف ووضع خطة عمل</h4>
+                <div class="articles-block">
+                    <img src="imgs/articles/7.png" alt="img" class="img-fluid">
+                    <div class="content seven">
+                        <div class="title">الاستشارات
+                            والحلول
+                            القانونية</div>
+                        <div class="description">تقديم الاستشارات
+                            والحلول القانونية.</div>
                     </div>
-                    <div class="content-layer">
-                        <p>تحديد الأهداف ووضع خطة عمل متكاملة تتضمن الخطة التشغيلية والخطة التسويقية.</p>
+                </div>
+                <div class="articles-block">
+                    <img src="imgs/articles/8.png" alt="img" class="img-fluid">
+                    <div class="content eight">
+                        <div class="title">بناء هيكلية
+                            الموارد
+                            البشرية</div>
+                        <div class="description">بناء هيكلية الموارد
+                            البشرية والتوصيف
+                            الوظيفي.</div>
+                    </div>
+                </div>
+                <div class="articles-block">
+                    <img src="imgs/articles/9.png" alt="img" class="img-fluid">
+                    <div class="content nine">
+                        <div class="title">الاستشارات
+                            والحلول
+                            التقنية.</div>
+                        <div class="description">تقديم الاستشارات
+                            والحلول التقنية.</div>
+                    </div>
+                </div>
+                <div class="articles-block">
+                    <img src="imgs/articles/10.png" alt="img" class="img-fluid">
+                    <div class="content ten">
+                        <div class="title">بناء
+                            استراتيجية
+                            التسويق</div>
+                        <div class="description">بناء استراتيجية التسويق
+                            حسب نوع النشاط
+                            وميزانية الانطلاقة.</div>
+                    </div>
+                </div>
+                <div class="articles-block">
+                    <img src="imgs/articles/11.png" alt="img" class="img-fluid">
+                    <div class="content eleven">
+                        <div class="title">تحديد الأهداف
+                            ووضع خطة
+                            عمل متكاملة
+                        </div>
+                        <div class="description">تحديد الأهداف ووضع
+                            خطة عمل متكاملة
+                            تتضمن الخطة التشغيلية
+                            والخطة التسويقية.</div>
                     </div>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
     <section id="services">
@@ -1643,7 +1676,9 @@
                     <p>كل ما تحتاجه لإنجاز وتخطيط أعمالك في منصة واحدة فقط، سارع وسجل في المنصة الآن لتحصل على كافة
                         المميزات المتاحة داخل
                         المنصة</p>
-                    <button>سجل الآن</button>
+                    <a href="https://slsalah.space/signup">
+                        <button>سجل الآن</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -1709,36 +1744,46 @@
             <button>المزيد</button>
         </div>
     </section>
+
     <section id="carousel">
         <div class="container">
             <h3 data-aos="fade-down" data-aos-duration="1000">بكل فخر عملاء <span class="main-color">سلسلة</span></h3>
             <div class="swiper mySwiper-2">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
+                    <div class="swiper-slide text-center">
                         <img src="imgs/logos/logo-1.webp" alt="logo" class="img-fluid">
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide text-center">
                         <img src="imgs/logos/logo-2.webp" alt="logo" class="img-fluid">
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide text-center">
                         <img src="imgs/logos/logo-3.webp" alt="logo" class="img-fluid">
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide text-center">
                         <img src="imgs/logos/logo-4.webp" alt="logo" class="img-fluid">
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide text-center">
                         <img src="imgs/logos/logo-5.webp" alt="logo" class="img-fluid">
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide text-center">
                         <img src="imgs/logos/logo-6.webp" alt="logo" class="img-fluid">
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide text-center">
                         <img src="imgs/logos/logo-7.webp" alt="logo" class="img-fluid">
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="swiper-button-next">
+                        <i class="fa fa-arrow-left"></i>
+                    </div>
+                    <div class="swiper-button-prev">
+                        <i class="fa fa-arrow-right"></i>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <section id="other-testimonial">
         <div class="container">
@@ -1812,7 +1857,9 @@
                         <p>مقالات غنية بالمعلومات المفيدة</p>
                         <div class="d-flex flex-wrap">
                             <input type="email" placeholder="البريد الالكتروني">
-                            <button>سجل الآن</button>
+                            <a href="https://slsalah.space/signup">
+                                <button>سجل الآن</button>
+                            </a>
                         </div>
                     </div>
                 </div>
