--- a/contact-us.html
+++ b/contact-us.html
@@ -70,8 +70,7 @@
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">الصفحة
-                                    الرئسية</a>
+                                <a class="nav-link" aria-current="page" href="index.html">الصفحة الرئيسية</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="who-we-ara.html">من نحن</a>
@@ -192,7 +191,7 @@
                     <div class="contact-us-block">
                         <h3 data-aos="fade-down" data-aos-duration="1000">اتصل بنا</h3>
                         <p data-aos="fade-down" data-aos-duration="1000">هذا النص هو مثال لنص يمكن أن يستبدل في نفس
-                            المساحة، لقد تم توليد هذا النص من مولد النص العربى
+                            المساحة، لقد تم توليد<br class="d-none d-lg-block"> هذا النص من مولد النص العربى
                         </p>
                         <form class="row needs-validation" novalidate>
                             <div class="col-12 position-relative" data-aos="fade-down" data-aos-duration="1000">
