--- a/marketing services.html
+++ b/marketing services.html
@@ -71,8 +71,7 @@
                         id="navbarNav">
                         <ul class="navbar-nav text-center py-4">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">الصفحة
-                                    الرئسية</a>
+                                <a class="nav-link" aria-current="page" href="index.html">الصفحة الرئيسية</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="who-we-ara.html">من نحن</a>
