--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -69,8 +69,7 @@
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">الصفحة
-                                    الرئسية</a>
+                                <a class="nav-link" aria-current="page" href="index.html">الصفحة الرئيسية</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="who-we-ara.html">من نحن</a>
