--- a/index.html
+++ b/index.html
@@ -1432,7 +1432,7 @@
 
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1446,7 +1446,7 @@
                                 متخصص في دراسات الجدوى الاقتصادية
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1462,7 +1462,7 @@
 
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1476,7 +1476,7 @@
                                 خبير حوكمة وتأسيس شركات
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1491,7 +1491,7 @@
                                 باحثة في مجال الابتكار والريادة المجتمعية.
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1507,7 +1507,7 @@
 
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1522,7 +1522,7 @@
 
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1536,7 +1536,7 @@
                                 مستشار صياغة اللوائح والإجراءات والسياسات التنظيمية.
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1550,7 +1550,7 @@
                                 متخصص تقييم شركات و متخصص تحليل الأسواق المالية وصناديق الاستثمار ودراسة مخاطر السوق.
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1564,7 +1564,7 @@
                                 مستشار تسويق وتطوير العلامات التجارية
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1578,7 +1578,7 @@
                                 مستشار مؤسس ومطور لكبرى العلامات التجارية في مجال الاغذية
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1592,7 +1592,7 @@
                                 مستشار تصميم الهوية البصرية والعلامات التجارية
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1606,7 +1606,7 @@
                                 مستشار تصميم تجربة المستخدم وتصميم الويب والتطبيقات
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1620,7 +1620,7 @@
                                 مستشار الأبحاث التسويقية والطبية
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1634,7 +1634,7 @@
                                 مستشار تدريب وتأهيل ومعلق صوتي
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1648,7 +1648,7 @@
                                 مستشار تأسيس وإدارة المطاعم والفنادق والخدمات السياحية
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">
+                                data-bs-target="#exampleModal">
                                 اطلب استشارّة
                             </button>
                         </div>
@@ -1975,8 +1975,8 @@
         </div>
     </footer>
 
-    <div class="modal fade" style="background-color: #fff;" id="staticBackdrop" data-bs-backdrop="static"
-        data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+        style="background-color: #fff;">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header d-flex flex-column justify-content-center">
