fix the title in the header

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             </div>
             <div class="swiper-slide">
                 <img src="imgs/home-page-2.webp" alt="img" class="img-fluid">
-                <h1>إلى رائدي الأعمال <br class="d-none d-lg-block"> أصحاب الرّؤى وفكر التطوير</h1>
+                <h1>إلى رائدي الأعمال أصحاب الرّؤى وفكر التطوير</h1>
             </div>
             <div class="swiper-slide">
                 <img src="imgs/home-page-3.webp" alt="img" class="img-fluid">
-                <h1>سلسلة معكم لتحقيق الرؤية وتحويلها <br class="d-none d-lg-block"> إلى واقع</h1>
+                <h1>سلسلة معكم لتحقيق الرؤية وتحويلها إلى واقع</h1>
             </div>
         </div>
         <div class="swiper-pagination number-of-sliders z-index-999">
