--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
 
     <section id="articles">
         <div class="container">
-            <h3>حقيبة ريادي</h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">حقيبة ريادي</h3>
             <div class="main-articles-block">
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-down-left" data-aos-duration="1000">
                     <img src="imgs/articles/1.png" alt="img" class="img-fluid">
                     <div class="content one">
                         <div class="title">فكرة المشروع</div>
@@ -244,7 +244,7 @@
                             السوق.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-down" data-aos-duration="1000">
                     <img src="imgs/articles/2.png" alt="img" class="img-fluid">
                     <div class="content two">
                         <div class="title">تصميم نموذج العمل التجاري</div>
@@ -253,7 +253,7 @@
                             المشروع.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-down" data-aos-duration="1000">
                     <img src="imgs/articles/3.png" alt="img" class="img-fluid">
                     <div class="content three">
                         <div class="title">دراسة جدوى</div>
@@ -264,7 +264,7 @@
                             للمشروع.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-down-right" data-aos-duration="1000">
                     <img src="imgs/articles/4.png" alt="img" class="img-fluid">
                     <div class="content four">
                         <div class="title">دراسة وتحليل</div>
@@ -274,7 +274,7 @@
                             المستهدف.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/articles/5.png" alt="img" class="img-fluid">
                     <div class="content five">
                         <div class="title">تصميم
@@ -289,7 +289,7 @@
                             مع النشاط والصناعة.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-up" data-aos-duration="1000">
                     <img src="imgs/articles/6.png" alt="img" class="img-fluid">
                     <div class="content six">
                         <div class="title">ملخص
@@ -300,7 +300,7 @@
                             والمستثمرين.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-up" data-aos-duration="1000">
                     <img src="imgs/articles/7.png" alt="img" class="img-fluid">
                     <div class="content seven">
                         <div class="title">الاستشارات
@@ -310,7 +310,7 @@
                             والحلول القانونية.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-right" data-aos-duration="1000">
                     <img src="imgs/articles/8.png" alt="img" class="img-fluid">
                     <div class="content eight">
                         <div class="title">بناء هيكلية
@@ -321,7 +321,7 @@
                             الوظيفي.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-up" data-aos-duration="1000">
                     <img src="imgs/articles/9.png" alt="img" class="img-fluid">
                     <div class="content nine">
                         <div class="title">الاستشارات
@@ -331,7 +331,7 @@
                             والحلول التقنية.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-up" data-aos-duration="1000">
                     <img src="imgs/articles/10.png" alt="img" class="img-fluid">
                     <div class="content ten">
                         <div class="title">بناء
@@ -342,7 +342,7 @@
                             وميزانية الانطلاقة.</div>
                     </div>
                 </div>
-                <div class="articles-block">
+                <div class="articles-block" data-aos="fade-up" data-aos-duration="1000">
                     <img src="imgs/articles/11.png" alt="img" class="img-fluid">
                     <div class="content eleven">
                         <div class="title">تحديد الأهداف
