--- a/index.html
+++ b/index.html
@@ -1663,16 +1663,26 @@
     <section id="planning">
         <div class="container">
             <h3 class="mb-5" data-aos="fade-up" data-aos-duration="1000">منصة سلسلة لتخطيط الأعمال</h3>
-            <div class="up">
-                <div class="imgs-container">
-                    <div class="container-layer">
-                        <img class="img img-1" src="imgs/planning.webp" data-aos="fade-left" data-aos-duration="500">
-                        <img class="img img-2" src="imgs/planning.webp" data-aos="fade-left" data-aos-duration="1000">
-                        <img class="img img-3" src="imgs/planning.webp" data-aos="fade-left" data-aos-duration="1500">
-                        <img class="img img-4" src="imgs/planning.webp" data-aos="fade-left" data-aos-duration="2000">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-6">
+                    <div class="swiper mySwiper-6">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="imgs/planning.webp" class="img-fluid" alt="img" data-aos="fade-left"
+                                    data-aos-duration="1000">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="imgs/planning.webp" class="img-fluid" alt="img" data-aos="fade-left"
+                                    data-aos-duration="1000">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="imgs/planning.webp" class="img-fluid" alt="img" data-aos="fade-left"
+                                    data-aos-duration="1000">
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="planning-content" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-6 planning-content" data-aos="fade-right" data-aos-duration="1000">
                     <p>كل ما تحتاجه لإنجاز وتخطيط أعمالك في منصة واحدة فقط، سارع وسجل في المنصة الآن لتحصل على كافة
                         المميزات المتاحة داخل
                         المنصة</p>
