--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
@@ -201,22 +202,33 @@
 
     <section id="more-about-us" class="more-about-us">
         <div class="container">
-            <div class="more-about-us-block more-about-us-block-2">
-                <div class="imgs">
-                    <img src="imgs/Soft skills-rafiki 1.webp" data-aos="fade-left" data-aos-duration="1000"
-                        class="img-fluid one" alt="img">
-                    <img src="imgs/Soft skills-rafiki 2.webp" data-aos="fade-left" data-aos-duration="1500"
-                        class="img-fluid two" alt="img">
-                    <img src="imgs/Soft skills-rafiki 3.webp" data-aos="fade-left" data-aos-duration="2000"
-                        class="img-fluid three" alt="img">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-5">
+                    <div class="swiper mySwiper-6">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="imgs/Soft-1.webp" class="img-fluid rounded" alt="img">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="imgs/Soft-2.webp" class="img-fluid rounded" alt="img">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="imgs/Soft-3.webp" class="img-fluid rounded" alt="img">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <p data-aos="fade-right" data-aos-duration="1000">
-                    انطلاقًا من مكتبنا في الرياض -المملكة العربية السعودية، نجسّر الفجوة بين الرؤية والواقع عبر سلسلة من
-                    الخدمات التي تواكب
-                    فكر رائد الأعمال في كل خطوة على طريق النجاح، ونضمن لك شراكة مثمرة وموثوقة لتحويل أفكارك إلى مشاريع
-                    ناجحة تعكس رؤيتك
-                    وتُحقق تطلعاتك نحو النجاح
-                </p>
+                <div class="col-6">
+                    <p data-aos="fade-right" data-aos-duration="1000">
+                        انطلاقًا من مكتبنا في الرياض -المملكة العربية السعودية، نجسّر الفجوة بين الرؤية والواقع عبر
+                        سلسلة من
+                        الخدمات التي تواكب
+                        فكر رائد الأعمال في كل خطوة على طريق النجاح، ونضمن لك شراكة مثمرة وموثوقة لتحويل أفكارك إلى
+                        مشاريع
+                        ناجحة تعكس رؤيتك
+                        وتُحقق تطلعاتك نحو النجاح
+                    </p>
+                </div>
             </div>
         </div>
     </section>
@@ -489,8 +501,10 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
