--- a/index.html
+++ b/index.html
@@ -1663,26 +1663,26 @@
     <section id="planning">
         <div class="container">
             <h3 class="mb-5" data-aos="fade-up" data-aos-duration="1000">منصة سلسلة لتخطيط الأعمال</h3>
-            <div class="row justify-content-between align-items-center">
-                <div class="col-6">
+            <div class="up">
+                <div class="imgs-container">
                     <div class="swiper mySwiper-6">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="imgs/planning.webp" class="img-fluid" alt="img" data-aos="fade-left"
-                                    data-aos-duration="1000">
+                                <img src="imgs/planning.webp" alt="img" data-aos="fade-left" data-aos-duration="1000"
+                                    class="rounded">
                             </div>
                             <div class="swiper-slide">
-                                <img src="imgs/planning.webp" class="img-fluid" alt="img" data-aos="fade-left"
-                                    data-aos-duration="1000">
+                                <img src="imgs/planning.webp" alt="img" data-aos="fade-left" data-aos-duration="1000"
+                                    class="rounded">
                             </div>
                             <div class="swiper-slide">
-                                <img src="imgs/planning.webp" class="img-fluid" alt="img" data-aos="fade-left"
-                                    data-aos-duration="1000">
+                                <img src="imgs/planning.webp" alt="img" data-aos="fade-left" data-aos-duration="1000"
+                                    class="rounded">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 planning-content" data-aos="fade-right" data-aos-duration="1000">
+                <div class="planning-content" data-aos="fade-right" data-aos-duration="1000">
                     <p>كل ما تحتاجه لإنجاز وتخطيط أعمالك في منصة واحدة فقط، سارع وسجل في المنصة الآن لتحصل على كافة
                         المميزات المتاحة داخل
                         المنصة</p>
