--- a/blog-info.html
+++ b/blog-info.html
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <div class="row second-row gy-4">
-                <img src="imgs/video-photo.webp" class="col-12 img-fluid info-gallery-img" alt="info-gallery-img"
+                <img src="imgs/Photo.webp" class="col-12 img-fluid info-gallery-img" alt="info-gallery-img"
                     data-aos="fade-down" data-aos-duration="1000">
                 <p class="col-12 mb-0" data-aos="fade-down" data-aos-duration="1000">
                     كيفية عمل دراسة الجدوى الاقتصادية تعد من أهم الخطوات التي يجب إتخاذها، وذلك عند القيام بأي مشروع.
