--- a/gallery.html
+++ b/gallery.html
@@ -210,7 +210,7 @@
                     </div>
                 </a>
                 <a href="info-gallery.html" class="gallery-block" data-aos="fade-right" data-aos-duration="1000">
-                    <figure class="d-lg-block d-none">
+                    <figure>
                         <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
                     <div class="gallery-block-content">
