--- a/index.html
+++ b/index.html
@@ -1679,6 +1679,10 @@
                                 <img src="imgs/planning.webp" alt="img" data-aos="fade-left" data-aos-duration="1000"
                                     class="rounded">
                             </div>
+                            <div class="swiper-slide">
+                                <img src="imgs/planning.webp" alt="img" data-aos="fade-left" data-aos-duration="1000"
+                                    class="rounded">
+                            </div>
                         </div>
                     </div>
                 </div>
