--- a/technical consulting.html
+++ b/technical consulting.html
@@ -19,7 +19,7 @@
                 <div class=" social-media">
                     <div class="row justify-content-between pt-2">
                         <div
-                            class="col-md-6 col-12 justify-content-md-start justify-content-center d-flex social-media-links">
+                            class="col-md-6 col-12 justify-content-md-start justify-content-between d-flex social-media-links">
                             <div class="ms-4">
                                 <a href="mailto:plan@slsalah.com">
                                     <span>plan@slsalah.com</span>
